<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_eigen_motion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>eigen</depend>
    <depend>control_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend> <!-- Già che ci sei, per JointState -->
  <depend>std_srvs</depend>    <!-- Per Trigger (gripper) -->
  <depend>geometry_msgs</depend>
<depend>std_msgs</depend>
  <depend>rclpy</depend>
<depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>